testdata/baselines/reference/submodule/conformance/classStaticBlock9(target=es2015).errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
classStaticBlock9.ts(2,20): error TS2729: Property 'foo' is used before its initialization.
classStaticBlock9.ts(4,11): error TS2729: Property 'foo' is used before its initialization.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== classStaticBlock9.ts (2 errors) ====
    class A {
        static bar = A.foo + 1
                       ~~~
!!! error TS2729: Property 'foo' is used before its initialization.
!!! related TS2728 classStaticBlock9.ts:6:12: 'foo' is declared here.
        static {
            A.foo + 2;
              ~~~
!!! error TS2729: Property 'foo' is used before its initialization.
!!! related TS2728 classStaticBlock9.ts:6:12: 'foo' is declared here.
        }
        static foo = 1;
    }
    